# xtls_crud

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: examples.md  gen_pages.py  index.md
examples/: index.html
reference/SUMMARY/: index.html
reference/commands/: index.html
reference/constants/: index.html
reference/constants/byte_size/: index.html
reference/constants/time_info/: index.html
reference/database/: index.html
reference/database/crud/: index.html
reference/database/models/: index.html
reference/database/schemas/: index.html
reference/models/: index.html
reference/models/inbounds/: index.html
reference/utils/: index.html
reference/utils/builders/: index.html
search/: search_index.json
site/: 404.html  gen_pages.py  index.html  objects.inv
site/examples/: index.html
site/reference/SUMMARY/: index.html
site/reference/commands/: index.html
site/reference/constants/: index.html
site/reference/core/: index.html
site/reference/database/: index.html
site/reference/models/: index.html
site/reference/utils/: index.html
site/reference/web/: index.html
site/search/: search_index.json
tests/: builders.py  crud.py  models.py
xtls_crud/: README.md  __init__.py  __main__.py
xtls_crud/commands/: __init__.py  main.py
xtls_crud/commands/web/: main.py
xtls_crud/constants/: __init__.py  byte_size.py  time_info.py
xtls_crud/core/: settings.py
xtls_crud/database/: __init__.py
xtls_crud/database/crud/: __init__.py  base.py  crud_inbounds.py
xtls_crud/database/db/: base.py  base_class.py  session.py
xtls_crud/database/models/: __init__.py  inbounds.py
xtls_crud/database/schemas/: __init__.py  inbounds.py
xtls_crud/models/: __init__.py
xtls_crud/models/inbounds/: __init__.py  easy_inbounds_builder.py  inbounds.py  settings.py  sniffing.py  stream_settings.py
xtls_crud/tests/: builders.py  crud.py
xtls_crud/utils/: __init__.py
xtls_crud/utils/builders/: __init__.py  inbounds_builder.py
xtls_crud/xtls_crud/constants/: byte_size.py  time_info.py
(+65 files in other folders)
