[tool.poetry]
name = "xtls-crud"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <amiwrpremium@gmail.com>"]
readme = "README.md"
packages = [{include = "xtls_crud"}]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
greenlet = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
