[tool.poetry]
name = "xtls-crud"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <amiwrpremium@gmail.com>"]
readme = "README.md"
packages = [{include = "xtls_crud"}]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
greenlet = "^2.0.1"
nice-tools = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.6"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
