[tool.poetry]
name = "xtls-crud"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <amiwrpremium@gmail.com>"]
readme = "README.md"
packages = [{include = "xtls_crud"}]

[tool.poetry.scripts]
reyes = "xtls_crud.commands.main:app"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
greenlet = "^2.0.1"
nice-tools = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.6"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-multipart = "^0.0.5"
alembic = "^1.8.1"
typer = {extras = ["all"], version = "^0.7.0"}
fastapi = "^0.88.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
